--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>To-Do App</title>
-  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Crete+Round&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" type="text/css" href="colorsbutton.js">
 </head>
 
 <body class="x">
-  <h1 class="text__maintitle">Things You Need To-Do</h1>
+  <h1 class="text__maintitle">TASKS TO BE DONE</h1>
   <form class="checklist">
     <label class="container">
       <label class="checklist__custom">
