fixing 2nd box checkmark and centering

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </label>
 
     <label class="container">
-      <label for="checkbox-check" class="checklist__custom">
+      <label class="checklist__custom">
         <input class="checklist__box" id="checkbox" type= "checkbox">
         <span class="checklist__checkmark"></span>
       </label>
-      <input id="checkbox-check" class="checklist__to-do-item" type= "text">
+      <input class="checklist__to-do-item" type= "text">
     </label>
       
     <label class="container">
