--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
   <form class="checklist">
     <label class="container">
       <label class="checklist__custom">
-        <input class="checklist__box" id="checkbox" type= "checkbox">
+        <input class="checklist__box" id="checkbox" type= "checkbox"> 
         <span class="checklist__checkmark"></span>
       </label>
       <input class="checklist__to-do-item" type= "text">
     </label>
 
     <label class="container">
-      <label for="checkbox-check" class="checklist__custom">
+      <label class="checklist__custom">
         <input class="checklist__box" id="checkbox" type= "checkbox">
         <span class="checklist__checkmark"></span>
       </label>
-      <input id="checkbox-check" class="checklist__to-do-item" type= "text">
+      <input class="checklist__to-do-item" type= "text">
     </label>
       
     <label class="container">
