updated 3d button and alert message

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+  <div id="dialogbox">
+    <div id="dialogboxbody"></div>
+    <div id="dialogboxfooter"></div>
+  </div>
+
   <div class="wrapper">
   <h1 class="text__maintitle">TASKS TO BE DONE</h1>
   <ul class="todo-list js-todo-list"></ul>
